[package]
name = "map-macro"
version = "0.2.4"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Declarative macros for statically initializing collections"
keywords = ["macro", "HashMap", "HashSet", "collections", "Vec"]
homepage = "https://github.com/jofas/map_macro"
repository = "https://github.com/jofas/map_macro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "^0.3.6", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
